# digster-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint-initdb.sh  docker-entrypoint-test.sh  docker-entrypoint-worker-color.sh  docker-entrypoint-worker-genre.sh  docker-entrypoint-worker.sh  docker-entrypoint.sh  init-db.sql  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
digster_api/: bg_tasks.py  chartmetric_controller.py  deezer_controller.py  digster_db.py  discogs_controller.py  dominant_color_finder.py  mailjet_client.py  main.py  models.py  sandbox.py  schemas.py  selenium_scrapper.py  spotify_controller.py  worker.py
digster_api/alembic/: env.py
digster_api/alembic/versions/: 052feb61bd36_add_genres_styles.py  2a65a738f7be_add_album.py  2fafc7035ee6_test_makefile_args.py  31a8b6b835b2_db_init.py  382273a8dd01_add_listens.py  4174e8ef1d63_db_init.py  42bc9ec37b9a_hello.py  42cf52576ffe_hello.py  45ca923bfd07_.py  4748bce3dbe5_.py  47eb6f793b69_.py  50e466fde1c2_add_albums.py  6e3bbb2b6c13_.py  7a346ab4b075_test_makefile_args.py  7d2059f8f978_test_makefile_args.py  7db569652867_add_colors.py  80e487e50212_change_country_code_type.py  8c110d784b37_test.py  8e0a5f4a050a_.py  906976097856_.py  92d6e4e894fa_add_settings.py  95b51063ebec_.py  95c604fb6542_up_tracks.py  a0a158fc0571_song_id.py  a3cf474a2448_.py  a4fc1c447e1f_add_genres_styles.py  b415f78581b3_recreate_tables.py  bcc4eef0cfe8_add_secondary.py  c0a922a4500f_change_type_to_datetime.py  e38c669db632_add_follows.py  f52661ccfe13_add_color_dominant.py  f67e709b3c53_first_migration.py
tests/: test_digster_api.py
