[tool.poetry]
name = "digster-api"
version = "0.1.0"
description = ""
authors = ["maxenceroux <maxence.roux@ornikar.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
