[tool.poetry]
name = "digster-api"
version = "0.1.0"
description = ""
authors = ["maxenceroux <maxence.roux@ornikar.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pydantic = "^1.8.2"
fastapi = {extras = ["all"], version = "^0.70.0"}
python-dotenv = "^0.19.2"
spotipy = "^2.19.0"
types-requests = "^2.26.1"
selenium = "^4.1.0"
psycopg2-binary = "^2.9.2"
alembic = "^1.7.5"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.28"}
sqlalchemy-stubs = "^0.4"
sklearn = "^0.0"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
celery = "4.4.7"
redis = "^4.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
black = {version = "^21.12b0", allow-prereleases = true}
mypy = "^0.910"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
experimental-string-processing = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.flake8]
exclude = "digster_api/alembic"


[tool.mypy]
exclude = "digster_api/alembic/"
plugins = "sqlalchemy.ext.mypy.plugin,sqlmypy"
ignore_missing_imports = true
